# ccsds123_issue_2_verification_model

./: .gitignore  Makefile  README.md  ccsds123_0-b-2_high_level_model.py  ccsds123_0_b_2_high_level_model.py  crop_image.py  display_image.py  hybrid_encoder_initial_accumulator_file_maker.py  pyproject.toml  requirements.txt  verify.py
ccsds123_i2_hlm/: ba_encoder.py  ccsds123.py  header.py  hybrid_encoder.py  hybrid_encoder_tables.py  sa_encoder.py  utils.py
ccsds123_i2_hlm/hybrid_encoder_tables/: code_05.txt  code_07.txt  code_13.txt  code_15.txt  flush_04.txt  flush_05.txt
output/: README.md
raw_images/: README.md
src/: ba_encoder.py  ccsds123.py  constants.py  header.py  hybrid_encoder.py  hybrid_encoder_tables.py  predictor.py  sa_encoder.py  utils.py
src/code_tables/: README.md  code_00.txt  code_02.txt  code_03.txt  code_06.txt  code_08.txt  code_09.txt  code_10.txt  code_12.txt  flush_00.txt  flush_01.txt  flush_03.txt  flush_07.txt  flush_09.txt  flush_10.txt  flush_11.txt  flush_12.txt  flush_13.txt  flush_14.txt  flush_15.txt
src/hybrid_encoder_tables/: code_01.txt  code_04.txt  code_11.txt  code_14.txt  flush_02.txt  flush_06.txt  flush_08.txt
test/: README.md
tools/: README.md  display_image.py  files_identical_check.py
