[project]
name = "ccsds123_i2_hlm"
version = "0.0.1"
authors = [
  { name="Daniel Vorhaug", email="dvorhaug@gmail.com" },
]
description = "A ccsds 123 issue 2 high-level model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"